--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -438,7 +438,7 @@
   "thCommandOptionClose": "Fechar",
   "thCommandOptionContext": "Contexto",
   "thCommandOptionCopyright": "Direitos Autorais",
-  "thCommandOptionCS": "CS",
+  "thCommandOptionCS": "Sistema de Coordenadas",
   "thCommandOptionDateValue": "Data",
   "thCommandOptionDimensionsValue": "Dimensões",
   "thCommandOptionDist": "Distância",
