--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -187,6 +187,11 @@
 
   "mpOptionsEditTitle": "Opções",
 
+  "mpScrapFreeText": "Texto livre",
+  "mpScrapFromFile": "Deste arquivo",
+  "mpScrapLabel": "ID de croqui",
+  "mpScrapWarning": "Croqui não definido",
+
   "mpStationTypeOptionWarning": "Estação não definida",
 
   "mpTextTypeOptionWarning": "Texto não definido",
