--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -187,8 +187,26 @@
 
   "mpOptionsEditTitle": "Opções",
 
+  "mpScrapScale1ValueLabel": "Real para 1 ponto",
+  "mpScrapScale1ValueObservation": "Medida real por ponto do desenho",
+  "mpScrapScale11Label": "Real",
+  "mpScrapScale2ValuesLabel": "Real para pontos",
+  "mpScrapScale2ValueObservation": "Medida real por pontos do desenho",
+  "mpScrapScale21Label": "Desenho",
+  "mpScrapScale22Label": "Real",
+  "mpScrapScale8ValuesLabel": "Coordenadas reais por coordenadas do desenho",
+  "mpScrapScale8ValueObservation": "Coordenadas reais por coordenadas do desenho",
+  "mpScrapScale81Label": "X1 desenho",
+  "mpScrapScale82Label": "Y1 desenho",
+  "mpScrapScale83Label": "X2 desenho",
+  "mpScrapScale84Label": "Y2 desenho",
+  "mpScrapScale85Label": "X1 real",
+  "mpScrapScale86Label": "Y1 real",
+  "mpScrapScale87Label": "X2 real",
+  "mpScrapScale88Label": "Y2 real",
   "mpScrapFreeText": "Texto livre",
   "mpScrapFromFile": "Deste arquivo",
+  "mpScrapScaleInvalidValueError": "Referência de escala inválida",
   "mpScrapLabel": "ID de croqui",
   "mpScrapWarning": "Croqui não definido",
 
