MPTextTypeOptionWidget supporting THCommandOptionText

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1156,6 +1156,12 @@
     "type": "text"
   },
 
+  "mpTextTextLabel": "Text",
+  "@mpTextTextLabel": {
+    "description": "The label for the text type",
+    "type": "text"
+  },
+
   "mpTextTypeOptionWarning": "Text not set",
   "@mpTextTypeOptionWarning": {
     "description": "The warning message for the text type option",
