--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -230,6 +230,8 @@
   "mpSubtypeEmpty": "Subtipo vazio",
   "mpSubtypeLabel": "Subtipo",
 
+  "mpTextTextLabel": "Texto",
+
   "mpTextTypeOptionWarning": "Texto não definido",
 
   "parsingErrors": "Erros na interpretação do arquivo",
