--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -234,6 +234,8 @@
 
   "mpTextTypeOptionWarning": "Texto não definido",
 
+  "mpTitleTextLabel": "Título",
+
   "parsingErrors": "Erros na interpretação do arquivo",
 
   "th2FileEditPageAddArea": "Criar área (A)",
