--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -229,6 +229,40 @@
 
   "mpSubtypeEmpty": "Subtipo vazio",
   "mpSubtypeLabel": "Subtipo",
+  "mpSubtypePointAirDraughtWinter": "Inverno",
+  "mpSubtypePointAirDraughtSummer": "Verão",
+  "mpSubtypePointAirDraughtUndefined": "Indefinido",
+  "mpSubtypePointStationTemporary": "Temporário",
+  "mpSubtypePointStationPainted": "Pintado",
+  "mpSubtypePointStationNatural": "Natural",
+  "mpSubtypePointStationFixed": "Fixo",
+  "mpSubtypePointWaterFlowPermanent": "Permanente",
+  "mpSubtypePointWaterFlowIntermittent": "Intermitente",
+  "mpSubtypePointWaterFlowPaleo": "Paleofluxo",
+  "mpSubtypeLineBorderInvisible": "Invisível",
+  "mpSubtypeLineBorderPresumed": "Presumido",
+  "mpSubtypeLineBorderTemporary": "Temporário",
+  "mpSubtypeLineBorderVisible": "Visível",
+  "mpSubtypeLineSurveyCave": "Caverna",
+  "mpSubtypeLineSurveySurface": "Superfície",
+  "mpSubtypeLineWallBedrock": "Rocha matriz",
+  "mpSubtypeLineWallBlocks": "Blocos",
+  "mpSubtypeLineWallClay": "Argila",
+  "mpSubtypeLineWallDebris": "Detritos",
+  "mpSubtypeLineWallFlowstone": "Travertino",
+  "mpSubtypeLineWallIce": "Gelo",
+  "mpSubtypeLineWallInvisible": "Invisível",
+  "mpSubtypeLineWallMoonmilk": "Leite de lua",
+  "mpSubtypeLineWallOverlying": "Sobreposta",
+  "mpSubtypeLineWallPebbles": "Seixos",
+  "mpSubtypeLineWallPit": "Poço",
+  "mpSubtypeLineWallPresumed": "Presumida",
+  "mpSubtypeLineWallSand": "Areia",
+  "mpSubtypeLineWallUnderlying": "Subjacente",
+  "mpSubtypeLineWallUnsurveyed": "Não levantada",
+  "mpSubtypeLineWaterFlowPermanent": "Permanente",
+  "mpSubtypeLineWaterFlowConjectural": "Conjectural",
+  "mpSubtypeLineWaterFlowIntermittent": "Intermitente",
 
   "mpTextTextLabel": "Texto",
 
