--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -128,6 +128,9 @@
 
   "mpMarkTextLabel": "Identificador",
 
+  "mpMultipleElementsClickedAllChoice": "Todos",
+  "mpMultipleElementsClickedTitle": "Vários elementos clicados",
+
   "mpNamedScaleTiny": "Minúsculo",
   "mpNamedScaleSmall": "Pequeno",
   "mpNamedScaleNormal": "Normal",
