Fixing 'User' english text

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2782,7 +2782,7 @@
     "type": "text"
   },
 
-  "thLineU": "Usuário",
+  "thLineU": "User",
   "@thLineU": {
     "description": "The label for the U line type",
     "type": "text"
