--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -52,9 +52,11 @@
   "mpCommandDescriptionEditLineType": "Editar tipo de linha",
   "mpCommandDescriptionEditPointsType": "Editar tipo de pontos",
   "mpCommandDescriptionEditPointType": "Editar tipo de ponto",
+  "mpCommandDescriptionMoveArea": "Mover área",
   "mpCommandDescriptionMoveBezierLineSegment": "Mover segmento de linha Bézier",
   "mpCommandDescriptionMoveElements": "Mover elementos",
   "mpCommandDescriptionMoveLine": "Mover linha",
+  "mpCommandDescriptionMoveLines": "Mover linhas",
   "mpCommandDescriptionMoveLineSegments": "Mover segmentos de linha",
   "mpCommandDescriptionMovePoint": "Mover ponto",
   "mpCommandDescriptionMultipleElements": "Editar vários elementos",
