--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -146,6 +146,8 @@
 
   "mpNameStationLabel": "Base",
 
+  "mpOptionsEditLineSegmentTypes": "Tipos de segmentos de linha",
+  
   "mpPassageHeightCeiling": "Teto",
   "mpPassageHeightCeilingLabel": "Teto",
   "mpPassageHeightDepth": "Profundidade",
