--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -126,6 +126,8 @@
   "mpLineHeightInvalidValueErrorMessage": "Altura inválida",
   "mpLineHeightHeightLabel": "Altura",
 
+  "mpLineSegmentTypeTypesTitle": "Tipo de segmento de linha",
+
   "mpLSizeLabel": "Tamanho",
 
   "mpMarkTextLabel": "Identificador",
