--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -4,13 +4,18 @@
   "aboutMapiahDialogMapiahVersion": "Versão {version}",
   "aboutMapiahDialogWindowTitle": "Sobre o Mapiah",
   "appTitle": "Mapiah",
-  "close": "Fechar",
+  "buttonClose": "Fechar",
   "initialPageAboutMapiahDialog": "Sobre o Mapiah",
   "initialPageLanguage": "Idioma",
   "initialPageOpenFile": "Abrir arquivo (Ctrl+O)",
   "initialPagePresentation": "Mapiah: uma interface gráfica amigável para mapeamento de cavernas com Therion",
   "fileEditWindowWindowTitle": "Edição de arquivo",
   "languageName": "{language, select, sys {Sistema} en {English} pt {Português} other {Desconhecido}}",
+
+  "helpDialogFailureToLoad": "Falha ao carregar o conteúdo de ajuda",
+  "helpDialogTooltip": "Ajuda",
+
+  "mapiahHomeHelpDialogTitle": "Tela inicial",
 
   "mpAngleUnitDegree": "grau",
   "mpAngleUnitGrad": "grad",
